
CR = Change Request item
Local-only = Changes not reflected in Source Code
Backend Maintenance = Change is not user facing

## [2016-03-12] [Since 2016-03-05 Integration]
### Changed:
- Review queue email now says if there were no changes
- History now indicates no changes on unchanged review items
- If a user clicks the 'no changes' button when editing, we only save the pre-edit data

## [2016-03-05] [Since 2016-02-27 Integration]
### Added:
- Dropdowns from 'View Pathways As' notification bar

### Changed:
- Small improvements to the wording of notification emails.
- Database backups once again mirrored to S3

### Fixed:
- #212: Categorization options show up on specialist form even if they don't have any specialties
- #352: Notification emails now correctly hide all updates by division.

## [2016-02-27] [Since 2016-02-20 Integration]
### Added:
- #334: Increase number of specialist offices to four
- #338: Add Pathways User guide to the navbar under "You"
- New specialist and clinic offices are now automatically 'public' unless otherwise specified
- #295: Limit area of practice filters shown to local referral area for Family Practice only
- #282: Red Flags and Pearls now show under Physician Resources in navbar search
- #314: Add Community Services and Red Flags to Entity Page Views
- #228: Add ability to mark content items 'visible to public' or not

### Fixed:
- Users now taken to correct tab on specialty page when the come there from a tab link on another page

## [2016-02-20] [Since 2016-02-06 Integration]
### Added:
- Super admins can now view Pathways as other divisions and roles without logging out
- Admins can now view Pathways as users in their divisions without logging out
- Service to create seeds for a fake database

### Changed:
- Updated wording of subscription emails to be more natural
- Update Level of Evidences, show levels as "(LOE=A)" and have them link to https://www.essentialevidenceplus.com/product/ebm_loe.cfm?show=grade

### Fixed: