@@ -10,6 +10,7 @@ Backend Maintenance = Change is not user facing
 - Review queue email now says if there were no changes
 - History now indicates no changes on unchanged review items
 - If a user clicks the 'no changes' button when editing, we only save the pre-edit data
+- 'Contact Us' on login page & navbar dropdown now goes to Provincial primary contacts
 
 ## [2016-03-05] [Since 2016-02-27 Integration]
 ### Added:
